Added a SearchServer class to handle search queries using a reverse index and added some tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(unit_tests PRIVATE
     ${TEST_SOURCES}
     ${CMAKE_SOURCE_DIR}/src/ConverterJSON.cpp
     ${CMAKE_SOURCE_DIR}/src/InvertedIndex.cpp
+    ${CMAKE_SOURCE_DIR}/src/SearchServer.cpp
 )
 
 # Header files
